# TriGA_CPP

./: .CMakeLists.txt.swp  .gitignore  .gmsh_boot.sh.swp  CMakeLists.txt  gmsh_boot.sh  plateandhole.msh  plot_cmds.plot
IO_files/geo_files/: airfoil.geo
IO_files/msh_files/: airfoil.msh  plateandhole.msh
IO_files/xmsh_files/: airfoil.xmsh  plateandhole.xmsh
Mesh_gen/: Mesh_gen.sln
Mesh_gen/Mesh_gen/: Mesh_Part1_funcs.cpp  Mesh_Part2_funcs.cpp  Mesh_Part3_funcs.cpp  Mesh_Part4_funcs.cpp  Mesh_gen.sln  Mesh_gen.vcxproj  Mesh_gen.vcxproj.filters  Meshfuncs.cpp  Meshfuncs.h  airfoil.geo  airfoil.msh  airfoil.xmsh  airfoil_final.xmsh  debugp.pos  debugr.pos  filepath.txt  mesh_main.cpp  plateandhole.db  plateandhole.geo  plateandhole.msh  plateandhole.xmsh  plateandhole2.db  plateandhole2.geo  plateandhole2.msh  plateandhole2.spline  plateandhole_final.xmsh  wrongmesh.pos  wrongparam.pos
gmsh/: gmsh.html
gmsh/tutorial/: Nick.geo
gnuplot/demo/: Makefile.am  Makefile.in  soundfit.par
gnuplot/docs/: ChangeLog
gnuplot/docs/psdoc/: ps_symbols.ps
gnuplot/share/js/: gnuplot_mouse.js
include/: Meshfuncs.h
lib/: CMakeLists.txt  Mesh_Part1_funcs.cpp  Mesh_Part2_funcs.cpp  Mesh_Part3_funcs.cpp  Mesh_Part4_funcs.cpp  mesh_main.cpp
